fixed overflow

--- a/css/technical-documentation.css
+++ b/css/technical-documentation.css
@@ -6,6 +6,7 @@
 
 body {
     font-family: 'Georama', sans-serif;
+    overflow-x: hidden;
 }
 
 body a {
